Crash when rendering halo flare #46225

Closed
opened 2015-09-23 14:31:59 +02:00 by Gaspar Fernandez · 7 comments

System Information
Linux Mint 17.2 with Intel Graphics Card
Using Intel Core i5-2450M CPU @ 2.50GHz

Blender Version
Broken: 2.76RC
Worked: 2.74

Render crashes just after rendering the whole image. I think it's when processing flare.

Exact steps for others to reproduce the error
Load blend file: http://owncloud.totaki.com/public.php?service=files&t=61b7e435bcf81f84271c9ba5a1aaf7c4
and F12 to render. When disabling flare it works well.

**System Information** Linux Mint 17.2 with Intel Graphics Card Using Intel Core i5-2450M CPU @ 2.50GHz **Blender Version** Broken: 2.76RC Worked: 2.74 Render crashes just after rendering the whole image. I think it's when processing flare. **Exact steps for others to reproduce the error** Load blend file: http://owncloud.totaki.com/public.php?service=files&t=61b7e435bcf81f84271c9ba5a1aaf7c4 and F12 to render. When disabling flare it works well.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GasparFernandez-1

Added subscriber: @GasparFernandez-1

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Tested and can't redo this one, could you try v2.75?

Could someone else try to redo the bug?

Tested and can't redo this one, could you try v2.75? Could someone else try to redo the bug?

Tried with v2.75a and crashes too. Here is a backtrace from gdb (with the precompiled binary from the web):

(gdb) bt

  • 0 0x0000000001464b16 in addalphaAddfacFloat ()
  • 1 0x00000000014214d8 in ?? ()
  • 2 0x00000000014261d1 in add_halo_flare ()
  • 3 0x000000000141c3ad in ?? ()
  • 4 0x000000000141c812 in ?? ()
  • 5 0x000000000141f8cc in ?? ()
  • 6 0x00000000014210cd in RE_BlenderFrame ()
  • 7 0x00000000011b301a in ?? ()
  • 8 0x000000000103db5a in ?? ()
  • 9 0x00007ffff66f3182 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
  • 10 0x00007ffff5e1647d in clone () from /lib/x86_64-linux-gnu/libc.so.6
Tried with v2.75a and crashes too. Here is a backtrace from gdb (with the precompiled binary from the web): (gdb) bt - 0 0x0000000001464b16 in addalphaAddfacFloat () - 1 0x00000000014214d8 in ?? () - 2 0x00000000014261d1 in add_halo_flare () - 3 0x000000000141c3ad in ?? () - 4 0x000000000141c812 in ?? () - 5 0x000000000141f8cc in ?? () - 6 0x00000000014210cd in RE_BlenderFrame () - 7 0x00000000011b301a in ?? () - 8 0x000000000103db5a in ?? () - 9 0x00007ffff66f3182 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0 - 10 0x00007ffff5e1647d in clone () from /lib/x86_64-linux-gnu/libc.so.6

This issue was referenced by 1827f99a78

This issue was referenced by 1827f99a7835628e7cf71b54dbcb21c2132ba664

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46225
No description provided.