Fix T46225: Crash when rendering halo flare

Error introduced in the multiview commit.
Also bringing back the "continue" statement instead of "return", as it
was before multiview.